# gobley

./: ARCHITECTURE.md  Cargo.toml  NOTES.md  jitpack.yml  settings.gradle.kts
build-logic/gobley-gradle-build/src/main/kotlin/: GobleyGradleBuildExtension.kt
build-logic/gobley-gradle-uniffi/src/main/kotlin/: Config.kt  UniFfiPlugin.kt
build-logic/gobley-gradle/src/main/kotlin/: Variant.kt
crates/gobley-uniffi-bindgen/: Cargo.toml
crates/gobley-uniffi-bindgen/src/: lib.rs
crates/gobley-uniffi-bindgen/src/gen_kotlin_multiplatform/: compounds.rs  enum_.rs  mod.rs  primitives.rs
crates/gobley-uniffi-bindgen/src/templates/: macros.kt
crates/gobley-uniffi-bindgen/src/templates/android+jvm/: CallbackInterfaceImpl.kt  HandleMap.kt  NamespaceLibraryTemplate.kt  RustBufferTemplate.kt  Types.kt  wrapper.kt
crates/gobley-uniffi-bindgen/src/templates/common/: EnumTemplate.kt  ErrorTemplate.kt  Interface.kt  ObjectTemplate.kt  RecordTemplate.kt  TopLevelFunctionTemplate.kt  Types.kt  (+1 more)
crates/gobley-uniffi-bindgen/tests/: proc_macro_codegen.rs
docs/src/components/NavbarItems/: useGitHubStargazersCount.tsx
gradle/: libs.versions.toml
scripts/: test_runtime.py
tests/uniffi/record-enum-methods/: Cargo.toml
tests/uniffi/record-enum-methods/src/: lib.rs
tests/uniffi/set-and-box/: Cargo.toml  uniffi.toml
tests/uniffi/set-and-box/src/: set-and-box.udl
tests/uniffi/set-and-box/src/commonMain/rust/: lib.rs
tests/uniffi/set-and-box/src/commonTest/kotlin/: SetAndBoxTest.kt
tests/uniffi/trait-record-enum/: Cargo.toml
tests/uniffi/trait-record-enum/src/: lib.rs
(+31 files in other folders)
